# jvm-toxcore-api

./: .cirrus.yml  .travis.yml  BUILD.bazel  README.md  build.sbt
.github/: settings.yml
.github/workflows/: ci.yml
project/: plugins.sbt
src/main/java/im/tox/core/: Functional.scala  ModuleCompanion.scala
src/main/java/im/tox/core/crypto/: PlainText.scala
src/main/java/im/tox/core/error/: CoreError.scala
src/main/java/im/tox/core/network/: Port.scala
src/main/java/im/tox/core/random/: RandomCore.scala
src/main/java/im/tox/core/typesafe/: BoundedIntCompanion.scala  ByteArrayCompanion.scala  Either.scala  EnumModuleCompanion.scala  Equals.scala  FixedSizeByteArrayCompanion.scala  IntCompanion.scala  KeyCompanion.scala  VariableSizeByteArrayCompanion.scala  WrappedValueCompanion.scala
src/main/java/im/tox/tox4j/: mkexceptions
src/main/java/im/tox/tox4j/av/: ToxAv.scala  ToxAvFactory.scala
src/main/java/im/tox/tox4j/av/callbacks/: AudioBitRateCallback.scala  AudioReceiveFrameCallback.scala  ToxAvEventListener.scala  ToxAvEventSynth.scala  VideoBitRateCallback.scala  VideoReceiveFrameCallback.scala
src/main/java/im/tox/tox4j/av/data/: AudioChannels.scala  AudioLength.scala  BitRate.scala  SamplingRate.scala
src/main/java/im/tox/tox4j/av/exceptions/: ToxavBitRateSetException.java
src/main/java/im/tox/tox4j/core/: ToxCore.scala  ToxCoreConstants.scala
src/main/java/im/tox/tox4j/core/callbacks/: FileRecvCallback.scala  FriendLosslessPacketCallback.scala  FriendLossyPacketCallback.scala  FriendMessageCallback.scala  FriendNameCallback.scala  FriendRequestCallback.scala  FriendStatusMessageCallback.scala  ToxCoreEventSynth.scala
src/main/java/im/tox/tox4j/crypto/: ToxCrypto.scala  ToxCryptoConstants.scala
src/main/java/im/tox/tox4j/exceptions/: ToxException.scala
src/test/java/im/tox/core/: ModuleCompanionTest.scala
src/test/java/im/tox/core/typesafe/: DiscreteValueCompanionTest.scala  KeyCompanionTest.scala
(+19 files in other folders)
