load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_test")
load("//tools/project:build_defs.bzl", "project")

project()

scala_library(
    name = "jvm-toxcore-api",
    srcs = glob([
        "src/main/java/**/*.java",
        "src/main/java/**/*.scala",
    ]),
    visibility = ["//visibility:public"],
    deps = ["@maven//:org_jetbrains_annotations"],
)

scala_test(
    name = "jvm-toxcore-api-test",
    size = "small",
    srcs = glob(["src/test/java/**/*.scala"]),
    deps = [
        ":jvm-toxcore-api",
        "@maven//:org_scalacheck_scalacheck_2_11",
    ],
)
